istio-poc/manifests/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: poc
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-display-req-headers
  namespace: poc
  labels:
    app: debug-display-req-headers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-display-req-headers
  template:
    metadata:
      labels:
        app: debug-display-req-headers
    spec:
      containers:
      - image: iypetrov/debug-display-req-headers:1.11.0
        name: debug-display-req-headers
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-display-envs
  namespace: poc
  labels:
    app: debug-display-envs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-display-envs
  template:
    metadata:
      labels:
        app: debug-display-envs
    spec:
      containers:
      - image: iypetrov/debug-display-envs:1.1.0
        name: debug-display-envs
        ports:
        - containerPort: 8080
