istio-poc/manifests/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: debug-display-req-headers
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: debug-display-req-headers
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: debug-display-envs 
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: debug-display-envs
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
