istio-poc/manifests/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - "app.cpx-lab52.de"
      tls:
        mode: SIMPLE
        credentialName: app-cpx-lab52-de-tls
      port:
        number: 443
        name: https
        protocol: HTTPS
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-route
  namespace: poc
spec:
  hosts:
    - "app.cpx-lab52.de"
  gateways:
    - istio-ingress/app-gateway
  http:
    - match:
        - uri:
            prefix: /nginx
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx.poc.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /headers
      rewrite:
        uri: /
      route:
        - destination:
            host: debug-display-req-headers.poc.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /envs
      rewrite:
        uri: /
      route:
        - destination:
            host: debug-display-envs.poc.svc.cluster.local
            port:
              number: 80
